implemented PRAC-8 stuff there is a lot of it

--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -127,6 +127,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="ConsoleReader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleReader.h" />
