--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{0808E2AA-BCB6-48DA-9BDA-9967AF9A56AD}</ProjectGuid>
-    <RootNamespace>Test</RootNamespace>
+    <RootNamespace>Main</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>Main</ProjectName>
   </PropertyGroup>
