PRAC-12 made a class for those methods, updated unit testing

--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -129,10 +129,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CharOccurrences.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="ConsoleReader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CharOccurrences.h" />
     <ClInclude Include="ConsoleReader.h" />
   </ItemGroup>
   <ItemGroup>
