Fixed paths to libs

--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -79,7 +79,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Andrzey\source\repos\Andrtisar\cppStuff\Test\Test\lib;C:\Users\Andrzey\source\repos\Andrtisar\cppStuff\Test\Test\lib\log4cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>lib;lib\log4cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
