--- a/Test/NativeUnitTest/NativeUnitTest.vcxproj
+++ b/Test/NativeUnitTest/NativeUnitTest.vcxproj
@@ -93,7 +93,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;C:\Program Files (x86)\Typemock\Isolator++\include\ForTests;C:\Users\Andrzey\source\repos\Andrtisar\cppStuff\Test\Test\lib;C:\Users\Andrzey\source\repos\Andrtisar\cppStuff\Test\Test\lib\log4cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;C:\Program Files (x86)\Typemock\Isolator++\include\ForTests;..\Test\lib;..\Test\lib\log4cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
