Prac 13 merge those prs into one (#19)
* Prac 8 implement mentioned changes (#15)

* implemented PRAC-8 stuff
there is a lot of it

* small changes to ConsoleReader structure

* Prac 9 -> Prac-13 (#16)

* PRAC-9 another test - if occurs in line works

* PRAC-9 made an advanced test with mock and such

* PRAC-9 expanded console reader unit test
I guess this is all I can do with this huh

* PRAC-9 test if calculateOccursInFile properly calls calculateOccurs
not with a fake unfortunately

* "Test if path exists" in one test, now creates a temp file

* Fixed some stuff with unit testing I guess?

* Prac-10 -> Prac-13 (#17)

* logging stuff

* moved log instance from method to class instance

* Removed unnecessary libs

* Fixed paths to libs

* Prac 12 -> Prac 13 (#18)

* const chars are now inside of class

* PRAC-12 made a class for those methods, updated unit testing

* Restructured charOccurs class to not have that array accessible.

* I guess the tests now work, but I'm not proud of this one.

* Changed output path, changed gitignore to reflect it

* Moved cpp inclusions from UnitTest to header.
Is this what I am supposed to do?

* Fixed some merge mess

--- a/Test/Test/Test.vcxproj.filters
+++ b/Test/Test/Test.vcxproj.filters
@@ -18,10 +18,25 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConsoleReader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CharOccurrences.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CharOccurrences.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="log4cpp.properties" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="log4cpp.properties" />
   </ItemGroup>
 </Project>
